--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -1,22 +1,26 @@
 <!-- Section title -->
-<div class="row mb-5">
-  <div class="col-md-8">
-    <p *ngIf="subTitle" class="subtitle txt-primary text-uppercase">{{subTitle}}</p>
-    <h2>{{title}}</h2>
-    <p *ngIf="text" class="txt-dark-muted">{{text}}</p>
-  </div>
-  <div *ngIf="link" class="col-md-4 d-flex align-items-center justify-content-end">
-    <a mat-mini-fab color="accent" aria-label="Read more" href="{{link}}">
-      <mat-icon *ngIf="!linkIcon">more_horiz</mat-icon>
-      <mat-icon *ngIf="linkIcon">{{linkIcon}}</mat-icon>
-    </a>
-  </div>
+<div class="container">
+  <div class="row mb-5">
 
-  <div *ngIf="modal" class="col-md-4 d-flex align-items-center justify-content-end">
-    <button mat-fab color="accent" aria-label="Preview page" (click)="openModal(modal)">
-      <mat-icon *ngIf="!modalIcon">open_in_new</mat-icon>
-      <mat-icon *ngIf="modalIcon">{{modalIcon}}</mat-icon>
-    </button>
-  </div>
+    <div class="col-md-8">
+      <p *ngIf="subTitle" class="subtitle txt-primary text-uppercase">{{subTitle}}</p>
+      <h2>{{title}}</h2>
+      <p *ngIf="text" class="txt-dark-muted">{{text}}</p>
+    </div>
+    
+    <div *ngIf="link" class="col-md-4 d-flex align-items-center justify-content-end">
+      <a mat-mini-fab color="accent" aria-label="Read more" href="{{link}}">
+        <mat-icon *ngIf="!linkIcon">more_horiz</mat-icon>
+        <mat-icon *ngIf="linkIcon">{{linkIcon}}</mat-icon>
+      </a>
+    </div>
 
+    <div *ngIf="modal" class="col-md-4 d-flex align-items-center justify-content-end">
+      <button mat-fab color="accent" aria-label="Preview page" (click)="openModal(modal)">
+        <mat-icon *ngIf="!modalIcon">open_in_new</mat-icon>
+        <mat-icon *ngIf="modalIcon">{{modalIcon}}</mat-icon>
+      </button>
+    </div>
+
+  </div>
 </div>
