--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -1,14 +1,13 @@
 @import "../../../variables";
 
 .painting-card {
-  height: 100%;
   width: 100%;
   overflow: hidden;
+  box-shadow: none !important;
 }
 
 .painting-card-img {
   width: 100%;
-  height: 100%;
   object-position: 50% 50%;
   object-fit: cover;
   border-radius: 5px;
