--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -98,6 +98,76 @@ button::-moz-focus-inner {
 }
 
 /*************************************/
+/**            Masonry              **/
+/*************************************/
+app-painting-card {
+  height: fit-content;
+  margin: .5rem 0;
+}
+
+.masonry {
+  /* Masonry container */
+  column-count: 1;
+  -webkit-column-count: 1;
+  -moz-column-count: 1;
+  column-gap: 1em;
+  -webkit-column-gap: 1em;
+  -moz-column-gap: 1em;
+  transition: 500ms ease all;
+  -webkit-transition: 500ms ease all;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+.item {
+  display: inline-block;
+  background: #fff;
+  padding: 0rem;
+  width: 100%;
+  border-radius: 4px;
+}
+.item img {
+  max-width: 100%;
+  height: auto;
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .masonry {
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .masonry {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .masonry {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .masonry {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+/*************************************/
 /**            Sections             **/
 /*************************************/
 
