added painting and news edit screens

--- a/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
+++ b/angular-web-app/src/app/components/_admin/dashboard/dashboard.component.html
@@ -1,8 +1,5 @@
 <div class="container-fluid pt-5">
-  <app-section-title 
-    [title]="'Dashboard'"
-    [subTitle]="'Admin'"
-    [text]="'Welkom bij Material Admin'">
+  <app-section-title [title]="'Dashboard'" [subTitle]="'Admin'" [text]="'Welkom bij Material Admin'" [admin]="true">
   </app-section-title>
 
   <div class="row">
