--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-5">
-    <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+    <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
     </app-section-title>
 
     <div class="row">
