--- a/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
+++ b/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid py-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [modal]="content">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [modal]="content" [admin]="true">
   </app-section-title>
 
 
