--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -30,7 +30,7 @@
                 <mat-expansion-panel-header>
                   <mat-panel-title>
                     <mat-icon color="accent" class="mr-3">person</mat-icon>
-                    <strong>Artiest</strong>
+                    <strong>Kunstenaar</strong>
                   </mat-panel-title>
                 </mat-expansion-panel-header>
                 <div class="panel-content">{{ painting.artist }}</div>
