--- a/angular-web-app/src/app/components/_admin/general/general.component.html
+++ b/angular-web-app/src/app/components/_admin/general/general.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid pt-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z8">
         <form (ngSubmit)="onSubmit()" #generalContentForm="ngForm" *ngIf="content">
 
           <!-- Form settings -->
