--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid pt-5" *ngIf="navContent">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z8">
         <h4 class="title-underlined">Resultaat</h4>
         <app-nav [navContent]="navContent" [fixed]="false" class="navbar-scrolled"></app-nav>
       </mat-card>
@@ -13,7 +13,7 @@
 
   <div class="row mb-5">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z8">
         <h4 class="title-underlined">Instellingen</h4>
 
         <form (ngSubmit)="onSubmit()" #navigationForm="ngForm">
