--- a/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
   <div class="row">
@@ -67,7 +67,7 @@
                     class="mr-2">
                     <mat-icon>visibility</mat-icon>
                   </button>
-                  <button mat-icon-button color="accent" class="mr-2">
+                  <button mat-icon-button color="accent" (click)="goToNewsEdit(item.id)" class="mr-2">
                     <mat-icon>edit</mat-icon>
                   </button>
                   <button mat-icon-button color="primary" (click)="deleteItem(item.id)">
@@ -107,7 +107,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="news-header">
-            <img class="w-100 rounded mat-elevation-z4" [src]="modalItem.image" alt="news" />
+            <img class="w-100 rounded mat-elevation-z8" [src]="modalItem.image" alt="news" />
           </div>
         </div>
         <div class="col-md-9">
@@ -119,7 +119,7 @@
             <div class="txt-dark-muted">
               <hr class="hr-news">
               <mat-icon class="inline-icon mr-2">today</mat-icon>
-              <span>{{ modalItem.date | date}}</span>
+              <span>{{ modalItem.timestampCreated | date}}</span>
               <span class="px-2">|</span>
               <mat-icon class="inline-icon mr-2">person</mat-icon>
               <span>{{ modalItem.author }}</span>
