--- a/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
+++ b/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid py-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
   <!-- Page preview -->
   <!-- <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z8">
         <h4 class="title-underlined">Resultaat</h4>
         <div class="d-flex flex-column scroll-content-wrapper" style="height: 500px; padding-bottom: 20px;">
           <ngx-simplebar class="d-flex flex-column scroll-content">
