--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-5">
-  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
   <div class="row">
@@ -39,7 +39,7 @@
               </ng-container>
 
               <ng-container matColumnDef="artist">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Artiest </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Kunstenaar </th>
                 <td mat-cell *matCellDef="let painting"> {{ painting.artist }} </td>
               </ng-container>
 
@@ -67,7 +67,7 @@
                     class="mr-2">
                     <mat-icon>visibility</mat-icon>
                   </button>
-                  <button mat-icon-button color="accent" class="mr-2">
+                  <button mat-icon-button color="accent" (click)="goToPaintingEdit(painting.id)" class="mr-2">
                     <mat-icon>edit</mat-icon>
                   </button>
                   <button mat-icon-button color="primary" (click)="deletePainting(painting.id)">
