--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -1,5 +1,5 @@
 <!-- Section title -->
-<div class="container">
+<div [ngClass]="admin ? 'container-fluid' : 'container'">
   <div class="row mb-5">
 
     <div class="col-md-8">
