--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -110,5 +110,38 @@
         </div>
       </div>
     </section>
+
+    <!-- Cards -->
+    <!-- <section class="page-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <app-info-card [title]="'Omschrijving'" [text]="painting.description" [icon]="'description'">
+            </app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Kunstenaar'" [text]="painting.artist" [icon]="'person'"></app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Verf en materiaal'" [text]="painting.paint + ' op ' + painting.material"
+              [icon]="'palette'"></app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Afmetingen'" [text]="painting.length + ' x ' + painting.width + ' cm'"
+              [icon]="'photo_size_select_actual'"></app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Categorie'" [text]="painting.category" [icon]="'category'"></app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Status'" [text]="painting.status" [icon]="'more'"></app-info-card>
+          </div>
+          <div class="col-12 col-md-6 col-xl-4">
+            <app-info-card [title]="'Prijs'" [text]="painting.price" [icon]="'shopping_bag'"></app-info-card>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
   </main>
 </div>
