--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -2,95 +2,95 @@
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
-  <div class="row">
+  <div class="row mb-5">
+
+    <div class="col-12" *ngIf="isLoadingResults">
+      <app-loading [message]="'Schilderijen laden...'"></app-loading>
+    </div>
+
     <div class="col-12">
 
-      <div *ngIf="paintings">
+      <!-- Table Filter -->
+      <mat-form-field [appearance]="formStyle" [color]="formColor" class="w-100">
+        <button mat-button matPrefix mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Animals" #input>
+        <button mat-button *ngIf="input.value" matSuffix mat-icon-button aria-label="Clear"
+          (click)="input.value=''; resetFilter()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
 
-        <!-- Table Filter -->
-        <mat-form-field [appearance]="formStyle" [color]="formColor" class="w-100">
-          <button mat-button matPrefix mat-icon-button>
-            <mat-icon>search</mat-icon>
-          </button>
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Animals" #input>
-          <button mat-button *ngIf="input.value" matSuffix mat-icon-button aria-label="Clear"
-            (click)="input.value=''; resetFilter()">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
+      <!-- Elevation -->
+      <div class="mat-elevation-z8">
+        <!-- Table -->
+        <div class="table-responsive">
+          <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
+            matSortDirection="desc">
+            <ng-container matColumnDef="thumbnail" sticky>
+              <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
+              <td mat-cell *matCellDef="let painting">
+                <img [src]="painting.thumbnail" alt="{{ painting.title }}" class="rounded img-table mat-elevation-z2">
+              </td>
+            </ng-container>
 
-        <!-- Elevation -->
-        <div class="mat-elevation-z8">
-          <!-- Table -->
-          <div class="table-responsive">
-            <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
-              matSortDirection="desc">
-              <ng-container matColumnDef="thumbnail" sticky>
-                <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
-                <td mat-cell *matCellDef="let painting">
-                  <img [src]="painting.thumbnail" alt="{{ painting.title }}" class="rounded img-table mat-elevation-z2">
-                </td>
-              </ng-container>
+            <ng-container matColumnDef="title">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
+              <td mat-cell *matCellDef="let painting"> {{ painting.title }} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Titel </th>
-                <td mat-cell *matCellDef="let painting"> {{ painting.title }} </td>
-              </ng-container>
+            <ng-container matColumnDef="artist">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Kunstenaar </th>
+              <td mat-cell *matCellDef="let painting"> {{ painting.artist }} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="artist">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Kunstenaar </th>
-                <td mat-cell *matCellDef="let painting"> {{ painting.artist }} </td>
-              </ng-container>
+            <ng-container matColumnDef="paint">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Verf </th>
+              <td mat-cell *matCellDef="let painting"> {{ painting.paint }} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="paint">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Verf </th>
-                <td mat-cell *matCellDef="let painting"> {{ painting.paint }} </td>
-              </ng-container>
+            <ng-container matColumnDef="created">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
+              <td mat-cell *matCellDef="let painting"> {{ painting.timestampCreated | date }} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="created">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Toegevoegd </th>
-                <td mat-cell *matCellDef="let painting"> {{ painting.timestampCreated | date }} </td>
-              </ng-container>
+            <ng-container matColumnDef="active">
+              <th mat-header-cell *matHeaderCellDef> Actief </th>
+              <td mat-cell *matCellDef="let painting">
+                <mat-slide-toggle [checked]="painting.active" (change)="setActiveState(painting , $event)"></mat-slide-toggle>
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="active">
-                <th mat-header-cell *matHeaderCellDef> Actief </th>
-                <td mat-cell *matCellDef="let painting">
-                  <mat-slide-toggle checked="{{ painting.active }}"></mat-slide-toggle>
-                </td>
-              </ng-container>
+            <ng-container matColumnDef="options">
+              <th mat-header-cell *matHeaderCellDef> Opties </th>
+              <td mat-cell *matCellDef="let painting">
+                <button mat-icon-button color="accent" (click)="setModalPainting(painting); openModal(modalContent)"
+                  class="mr-2">
+                  <mat-icon>launch</mat-icon>
+                </button>
+                <button mat-icon-button color="accent" (click)="goToPaintingEdit(painting.id)" class="mr-2">
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary" (click)="deletePainting(painting.id)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
 
-              <ng-container matColumnDef="options">
-                <th mat-header-cell *matHeaderCellDef> Opties </th>
-                <td mat-cell *matCellDef="let painting">
-                  <button mat-icon-button color="accent" (click)="setModalPainting(painting); openModal(modalContent)"
-                    class="mr-2">
-                    <mat-icon>visibility</mat-icon>
-                  </button>
-                  <button mat-icon-button color="accent" (click)="goToPaintingEdit(painting.id)" class="mr-2">
-                    <mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="primary" (click)="deletePainting(painting.id)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </td>
-              </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-              <!-- Row shown when there is no matching data. -->
-              <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="7">Geen data beschikbaar.</td>
-              </tr>
-            </table>
-          </div>
-
-          <!-- Paginator -->
-          <mat-paginator [pageSizeOptions]="[10, 25, 50]" [length]="paintings.length" class="mb-5">
-          </mat-paginator>
-
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="7">Geen data beschikbaar.</td>
+            </tr>
+          </table>
         </div>
+
+        <!-- Paginator -->
+        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
 
       </div>
 
