--- a/angular-web-app/src/app/components/_admin/manager-messages/manager-messages.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-messages/manager-messages.component.html
@@ -60,8 +60,8 @@
             <ng-container matColumnDef="options">
               <th mat-header-cell *matHeaderCellDef> Opties </th>
               <td mat-cell *matCellDef="let item">
-                <button mat-icon-button color="accent" (click)="setModalItem(item); openModal(modalContent); markAsRead(item)"
-                  class="mr-2">
+                <button mat-icon-button color="accent"
+                  (click)="setModalItem(item); openModal(modalContent); markAsRead(item)" class="mr-2">
                   <mat-icon>launch</mat-icon>
                 </button>
                 <button mat-icon-button color="primary" (click)="deleteItem(item.id)">
@@ -81,7 +81,8 @@
         </div>
 
         <!-- Paginator -->
-        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons>
+        </mat-paginator>
 
       </div>
 
